# Eldrun-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: EldrunConfig.cmake.in  EldrunDependencies.cmake  EldrunModule.cmake  EldrunOptions.cmake  README.md
cmake/warnings/: EldrunWarnings.cmake
docs/: README.md
docs/architecture/: reading-notes-engine-direction.md  rendering.md
editor/: CMakeLists.txt
editor/eldrun_editor/: CMakeLists.txt
editor/eldrun_editor/include/eldrun/editor/: editor_app_state.hpp
editor/eldrun_editor/src/: editor_app_state.cpp  main.cpp
engine/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt  version.hpp
engine/core/include/eldrun/core/: log.hpp  timestep.hpp
engine/core/src/: log.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/eldrun/platform/: application.hpp
engine/platform/src/: application.cpp
engine/render/: CMakeLists.txt
engine/render/include/eldrun/render/: render_frame_context.hpp  renderer.hpp
engine/render/src/: renderer.cpp  renderer_backend.hpp  renderer_backend_bgfx.cpp  renderer_backend_sdl.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/include/eldrun/runtime/: app_state.hpp  frame_context.hpp
engine/runtime/src/: app_state.cpp
engine/world/: README.md
games/: CMakeLists.txt
games/sandbox/: CMakeLists.txt
games/sandbox/src/: main.cpp  sandbox_app_state.cpp  sandbox_app_state.hpp
tests/: CMakeLists.txt
